--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
   - 2.6
   - 2.7
   - 3.2
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: python setup.py develop
-# command to run tests, e.g. python setup.py test
+install:
+  - pip install Pillow
+  - python setup.py develop
 script:  python -m landez.tests
-
