--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ python:
   - 2.7
 install:
   - pip install Pillow
+  - pip install coverage
   - python setup.py develop
-script:  python -m landez.tests
+script:  coverage run -m landez.tests
+after_success:
+  - pip install coveralls
+  - coveralls
