--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,16 @@ language: python
 python:
   - 2.6
   - 2.7
-install:
-  - pip install Pillow
+before_install:
+  - sudo apt-add-repository --yes ppa:mapnik/v2.2.0
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
   - pip install coverage
+  - pip install -r requirements.txt
+install:
   - python setup.py develop
-script:  coverage run -m landez.tests
+script:
+  - nosetests --with-coverage --cover-package=landez
 after_success:
   - pip install coveralls
   - coveralls
