--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
 language: python
 python:
   - 2.7
+
 before_install:
+  - deactivate
   - sudo apt-add-repository --yes ppa:mapnik/v2.2.0
   - sudo apt-get update -qq
   - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
-  - pip install coverage
+  - virtualenv --system-site-packages venv
+  - source venv/bin/activate
   - pip install -r requirements.txt
 install:
   - python setup.py develop
 before_script:
-  - cp -R /usr/share/pyshared/mapnik /home/travis/virtualenv/python2.7/lib/python2.7/site-packages
-  - cp /usr/lib/pyshared/python2.7/mapnik/_mapnik.so /home/travis/virtualenv/python2.7/lib/python2.7/site-packages/mapnik
+  - pip install nose
+  - pip install coverage
 script:
   - nosetests --with-coverage --cover-package=landez
 after_success:
