--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 before_install:
   - deactivate
-  - sudo apt-add-repository --yes ppa:mapnik/v2.2.0
+  - sudo apt-add-repository --yes ppa:mapnik/nightly-2.3
   - sudo apt-get update -qq
   - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
   - virtualenv --system-site-packages venv
