--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-add-repository --yes ppa:mapnik/nightly-2.3
   - sudo apt-get update -qq
   - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
+  - sudo apt-get install python3-setuptools
   - virtualenv --system-site-packages venv
   - source venv/bin/activate
   - pip install -r requirements.txt
