--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,11 @@ before_install:
   - sudo apt-add-repository --yes ppa:mapnik/nightly-2.3
   - sudo apt-get update -qq
   - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
-  - sudo apt-get install python3-setuptools
-  - virtualenv --system-site-packages venv
+  - virtualenv --system-site-packages venv -p python3
   - source venv/bin/activate
   - pip install -r requirements.txt
 install:
-  - python3 setup.py develop
+  - python setup.py develop
 before_script:
   - pip install nose
   - pip install coverage
