--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - deactivate
   - sudo apt-add-repository --yes ppa:mapnik/nightly-2.3
   - sudo apt-get update -qq
-  - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
+  - sudo apt-get install -y mapnik-utils python3-mapnik
   - virtualenv --system-site-packages venv -p python3
   - source venv/bin/activate
   - pip install -r requirements.txt
