--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,18 @@ python:
 
 before_install:
   - deactivate
-  - sudo apt-add-repository --yes ppa:mapnik/nightly-2.3
-  - sudo apt-get update -qq
-  - sudo apt-get install -y mapnik-utils python3-mapnik
+  - sudo apt-get install -y python-software-properties
+  - sudo add-apt-repository ppa:mapnik/nightly-trunk
+  - sudo apt-get update
+  - sudo add-apt-repository ppa:mapnik/nightly-trunk
+  - sudo apt-get update
+  - sudo apt-get install libmapnik libmapnik-dev mapnik-utils python-mapnik
+  - sudo apt-get install mapnik-input-plugin-gdal mapnik-input-plugin-ogr mapnik-input-plugin-postgis
+  mapnik-input-plugin-sqlite mapnik-input-plugin-osm
   - virtualenv --system-site-packages venv -p python3
   - source venv/bin/activate
   - pip install -r requirements.txt
+
 install:
   - python setup.py develop
 before_script:
