--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 language: python
 python:
-  - 2.7
+  - 3.5
 
 before_install:
   - deactivate
-  - sudo apt-add-repository --yes ppa:mapnik/v2.2.0
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
-  - virtualenv --system-site-packages venv
+  - sudo apt-get install -y python-software-properties
+  - sudo add-apt-repository ppa:mapnik/nightly-trunk
+  - sudo apt-get update
+  - sudo add-apt-repository ppa:mapnik/nightly-trunk
+  - sudo apt-get update
+  - sudo apt-get install libmapnik libmapnik-dev mapnik-utils python-mapnik
+  - sudo apt-get install mapnik-input-plugin-gdal mapnik-input-plugin-ogr mapnik-input-plugin-postgis
+  mapnik-input-plugin-sqlite mapnik-input-plugin-osm
+  - virtualenv --system-site-packages venv -p python3
   - source venv/bin/activate
   - pip install -r requirements.txt
 install:
