--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
--e git://github.com/mapbox/mbutil.git@master#egg=mbutil
+git+https://github.com/mapbox/mbutil.git@master#egg=mbutil
+git+https://github.com/mapnik/python-mapnik.git@v3.0.16#egg=mapnik
 Pillow == 5.1.0
