--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 
 before_install:
   - deactivate
-  - sudo apt-get install libmapnik-dev
+  - sudo apt-get install python3-mapnik
   - virtualenv --system-site-packages venv -p python3
   - source venv/bin/activate
   - pip install -r requirements.txt
