--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-dist: trusty
+dist: precise
 sudo: required
 language: python
 python:
-  - 3.5
+  - 2.7
 
 before_install:
   - deactivate
-  - sudo apt-get install python3-mapnik
-  - virtualenv --system-site-packages venv -p python3
+  - sudo apt-add-repository --yes ppa:mapnik/v2.2.0
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
+  - virtualenv --system-site-packages venv
   - source venv/bin/activate
   - pip install -r requirements.txt
 install:
