--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-add-repository --yes ppa:mapnik/v2.2.0
   - sudo apt-get update -qq
   - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
-  - virtualenv --system-site-packages venv
+  - virtualenv -p python3 --system-site-packages venv
   - source venv/bin/activate
   - pip install -r requirements.txt
 install:
