--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,23 @@ dist: xenial
 sudo: required
 language: python
 python:
+  - 2.7
   - 3.5
 
 before_install:
   - deactivate
   - sudo apt-get install -y python-software-properties
-  - virtualenv --system-site-packages venv -p python3
+  - virtualenv --system-site-packages venv
   - source venv/bin/activate
   - pip install -r requirements.txt
-  - sudo apt-get install python3-mapnik
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.5 ]]; then
+    sudo apt-get install python3-mapnik;
+    fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then
+    sudo apt-add-repository --yes ppa:mapnik/v2.2.0;
+    sudo apt-get update -qq;
+    sudo apt-get install -y mapnik-utils python-mapnik;
+    fi
 install:
   - python setup.py develop
 before_script:
