--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
+dist: xenial
 language: python
 python:
   - 2.7
 
 before_install:
   - deactivate
-  - sudo apt-add-repository --yes ppa:mapnik/v2.2.0
   - sudo apt-get update -qq
-  - sudo apt-get install -y libmapnik mapnik-utils python-mapnik
+  - sudo apt-get install -y libmapnik-dev mapnik-utils python-mapnik
   - virtualenv --system-site-packages venv
   - source venv/bin/activate
   - pip install -r requirements.txt
