--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 dist: xenial
+sudo: required
 language: python
 python:
   - 2.7
@@ -9,7 +10,6 @@ before_install:
   - sudo apt-get install -y python-software-properties
   - if [[ $TRAVIS_PYTHON_VERSION == 3.5 ]]; then virtualenv --system-site-packages venv -p python3; fi
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then virtualenv --system-site-packages venv; fi
-  - sudo apt-get update -qq
   - source venv/bin/activate
   - pip install -r requirements.txt
   - if [[ $TRAVIS_PYTHON_VERSION == 3.5 ]]; then
